# tonic-error

./: Cargo.toml  README.md
src/: lib.rs
tests/: test_tonicerror.rs
tonic-error-example/: Cargo.toml  README.md  build.rs
tonic-error-example/proto/: example.proto
tonic-error-example/src/: client.rs  common.rs  server.rs
tonic-error-impl/: Cargo.toml
tonic-error-impl/src/: lib.rs
