[package]
name = "tonic-error-example"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Thomas <ryan@ryant.org>"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
prost = "0.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tonic = "0.7"
tonic-error = {version = "0.1.0", path = ".." }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"