[package]
name = "tonic-error-impl"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Thomas <ryan@ryant.org>"]
license = "Apache-2.0"
description = "The derive proc-macro for the tonic-error crate."
homepage = "https://github.com/rthomas/tonic-error"
repository = "https://github.com/rthomas/tonic-error"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.20"
syn = "1.0.98"